--- a/_config.yml
+++ b/_config.yml
@@ -3,17 +3,17 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Gaulbots 358
+title: Gaulbots Blog
 subtitle:
 description:
 keywords:
-author: Calvin Xu
+author: Team 358
 language:
 timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: gaulbots.com
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
