--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -66,14 +66,14 @@ footer:
   icon:
     # Icon name in fontawesome, see: https://fontawesome.com/v4.7.0/icons/
     # `heart` is recommended with animation in red (#ff0000).
-    name: user
+    name: heart
     # If you want to animate the icon, set it to true.
-    animated: false
+    animated: true
     # Change the color of icon, using Hex Code.
-    color: "#808080"
+    color: "#ff0000"
 
   # If not defined, `author` from Hexo main config will be used.
-  copyright:
+  copyright: Calvin Xu
   # -------------------------------------------------------------
   powered:
     # Hexo link (Powered by Hexo).
