--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -614,7 +614,7 @@ needmoreshare2:
 
 # Google Webmaster tools verification setting
 # See: https://www.google.com/webmasters
-#google_site_verification:
+google_site_verification: QKhoZe6U24nbwuAHBB8H3fUQHcXMh25h7Fne3V5T1cA
 
 # Google Analytics
 #google_analytics:
