--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -824,9 +824,9 @@ motion:
     # slideUpIn | slideUpOut | slideDownIn | slideDownOut | slideLeftIn | slideLeftOut | slideRightIn | slideRightOut
     # slideUpBigIn | slideUpBigOut | slideDownBigIn | slideDownBigOut | slideLeftBigIn | slideLeftBigOut | slideRightBigIn | slideRightBigOut
     # perspectiveUpIn | perspectiveUpOut | perspectiveDownIn | perspectiveDownOut | perspectiveLeftIn | perspectiveLeftOut | perspectiveRightIn | perspectiveRightOut
-    post_block: fadeIn
-    post_header: slideDownIn
-    post_body: slideDownIn
+    # post_block: fadeIn
+    # post_header: slideDownIn
+    # post_body: slideDownIn
     coll_header: slideLeftIn
     # Only for Pisces | Gemini.
     sidebar: slideUpIn
