--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -396,7 +396,7 @@ cheers_enabled: true
 # Arial | Tahoma | Helvetica | Times New Roman | Courier New | Verdana | Georgia | Palatino | Garamond | Comic Sans MS | Trebuchet MS
 # ---------------------------------------------------------------
 font:
-  enable: false
+  enable: true
 
   # Uri of fonts host. E.g. //fonts.googleapis.com (Default).
   host:
@@ -409,7 +409,7 @@ font:
   # Global font settings used for all elements in <body>.
   global:
     external: true
-    family: Lato
+    family: Georgia
     size:
 
   # Font settings for Headlines (H1, H2, H3, H4, H5, H6).
