--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -138,7 +138,7 @@ exturl: false
 # External url should start with http:// or https://
 menu:
   home: / || home
-  #about: /about/ || user
+  about: /about/ || user
   #tags: /tags/ || tags
   #categories: /categories/ || th
   archives: /archives/ || archive
