--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -802,7 +802,7 @@ tabs:
 # Reading progress bar
 # Dependencies: https://github.com/theme-next/theme-next-reading-progress
 reading_progress:
-  enable: true
+  enable: false
   color: "#37c6c0"
   height: 2px
 
