--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -187,6 +187,7 @@ social:
   YouTube: https://www.youtube.com/channel/UCz9fReuS3KbH7R5ya2spa7g || youtube
   Instagram: https://instagram.com/gaulbots358 || instagram
   #Skype: skype:yourname?call|chat || skype
+  FTCScores: https://ftcscores.com/team/358 || flag-checkered
 
 social_icons:
   enable: true
