--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -177,7 +177,7 @@ site_state: true
 # Value after `||` delimeter is the name of FontAwesome icon. If icon (with or without delimeter) is not specified, globe icon will be loaded.
 social:
   #GitHub: https://github.com/yourname || github
-  E-Mail: mailto:gaulbots358@gmail.com || envelope
+  Email: mailto:gaulbots358@gmail.com || envelope
   #Weibo: https://weibo.com/yourname || weibo
   #Google: https://plus.google.com/yourname || google
   Twitter: https://twitter.com/Gaulbots358 || twitter
