--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -411,33 +411,33 @@ font:
   # Global font settings used for all elements in <body>.
   global:
     external: true
-    family: Georgia
+    family: Roboto Slab
     size:
 
   # Font settings for Headlines (H1, H2, H3, H4, H5, H6).
   # Fallback to `global` font settings.
   headings:
     external: true
-    family:
+    family: Bitter
     size:
 
   # Font settings for posts.
   # Fallback to `global` font settings.
   posts:
     external: true
-    family:
+    family: Merriweather
 
   # Font settings for Logo.
   # Fallback to `global` font settings.
   logo:
     external: true
-    family:
+    family: Press Start 2P
     size:
 
   # Font settings for <code> and code blocks.
   codes:
     external: true
-    family:
+    family: Courier New
     size:
 
 
