--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -401,7 +401,7 @@ font:
   enable: true
 
   # Uri of fonts host. E.g. //fonts.googleapis.com (Default).
-  host: https://fonts.googleapis.com
+  host: //fonts.googleapis.com
 
   # Font options:
   # `external: true` will load this font family from `host` above.
@@ -436,7 +436,7 @@ font:
 
   # Font settings for <code> and code blocks.
   codes:
-    external: true
+    external: false
     family: Courier New
     size:
 
