--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -619,7 +619,7 @@ needmoreshare2:
 google_site_verification: QKhoZe6U24nbwuAHBB8H3fUQHcXMh25h7Fne3V5T1cA
 
 # Google Analytics
-#google_analytics:
+google_analytics: UA-132775224-1
 
 # Bing Webmaster tools verification setting
 # See: https://www.bing.com/webmaster
