--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "hexo-renderer-ejs": "^0.3.1",
     "hexo-renderer-kramed": "^0.1.4",
     "hexo-renderer-stylus": "^0.3.3",
-    "hexo-server": "^0.3.1"
+    "hexo-server": "^0.3.1",
+    "hexo-tag-video": "0.0.2"
   }
 }
