--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "hexo-renderer-marked": "^3.0.0",
     "hexo-renderer-stylus": "^2.0.0",
     "hexo-server": "^2.0.0",
+    "hexo-tag-video": "0.0.2",
     "hexo-theme-next": "^8.0.0"
   }
 }
