--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: Gaulbots Blog
-subtitle: FTC Team 358\: Utinam Viverra Auxilium Ferret
+subtitle: "FTC Team 358: Utinam Viverra Auxilium Ferret"
 description:
 keywords: FTC, Robotics, FIRST
 author: Team 358
